--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.64.2",
+    "scss": "^0.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
