--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
-	"name": "banki",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev --turbo",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.11.1",
-		"@emotion/styled": "^11.11.0",
-		"@mui/material": "^5.14.4",
-		"@types/node": "20.4.8",
-		"@types/react": "18.2.18",
-		"@types/react-dom": "18.2.7",
-		"autoprefixer": "10.4.14",
-		"next": "13.4.12",
-		"next-auth": "^4.22.5",
-		"postcss": "8.4.27",
-		"react": "18.2.0",
-		"react-cookie": "^4.1.1",
-		"react-dom": "18.2.0",
-		"react-query": "^3.39.3",
-		"react-redux": "^8.1.2",
-		"redux": "^4.2.1",
-		"redux-thunk": "^2.4.2",
-		"sass": "^1.64.2",
-		"typescript": "5.1.6"
-	}
+  "name": "banki",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/node": "20.4.8",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.14",
+    "next": "13.4.12",
+    "postcss": "^8.4.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.64.2",
+    "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  }
 }
