--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "postcss": "^8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "sass": "^1.64.2",
     "typescript": "5.1.6"
   },
