--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "18.2.7",
     "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.5.0",
+    "jiti": "^1.19.3",
     "next": "13.4.12",
     "next-auth": "^4.22.5",
     "postcss": "^8.4.27",
