--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.0",
+    "debug": "^4.3.4",
     "jiti": "^1.19.3",
     "next": "13.4.12",
     "next-auth": "^4.22.5",
