--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "sass": "^1.64.2",
     "typescript": "5.1.6"
   },
