--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/react-redux": "^7.1.26",
     "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.0",
