--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "sass": "^1.64.2",
+    "swiper": "^10.3.0",
     "typescript": "5.1.6"
   },
   "devDependencies": {
