--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.5.0",
     "debug": "^4.3.4",
     "jiti": "^1.19.3",
+    "nanoid": "^5.0.1",
     "next": "13.4.12",
     "next-auth": "^4.22.5",
     "postcss": "^8.4.27",
