--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "debug": "^4.3.4",
     "jiti": "^1.19.3",
     "nanoid": "^5.0.1",
