cards mvp pages complited

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,13 @@
 {
-  "trailingComma": "es5",
+  "printWidth": 110,
   "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true
+  "semi": true,
+  "singleQuote": true,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "auto",
+  "jsxBracketSameLine": false
 }
