--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.4",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -29,8 +30,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1",
-    "redux-saga": "^1.2.3",
     "sass": "^1.64.2",
     "swiper": "^10.3.0",
     "typescript": "5.1.6"
