--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react-redux": "^7.1.26",
     "@uidotdev/usehooks": "^2.2.0",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "debug": "^4.3.4",
     "jiti": "^1.19.3",
@@ -33,7 +33,8 @@
     "react-redux": "^8.1.2",
     "sass": "^1.64.2",
     "swiper": "^10.3.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.5.3",
