config change ci/cd

--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -16,6 +16,6 @@ jobs:
       - name: install modules
         run: npm install
       - name: lint app
-        run: next lint
+        run: npm run lint
       - name: build project
-        run: next build
+        run: npm run build
