--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -20,6 +20,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: install modules
         run: npm install
+      - name: linter fix
+        run: npm run lint -- --fix
       - name: linter
         run: npm run lint
       - name: build project
